[gd_scene load_steps=5 format=3 uid="uid://bvg7balfo65"]

[ext_resource type="Script" path="res://Assets/Scripts/game_over.gd" id="1_fjap4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gnxu8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pf5tx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q2gqp"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_fjap4")

[node name="Panel" type="Panel" parent="."]
offset_right = 1149.0
offset_bottom = 647.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 16.0
offset_top = 15.0
offset_right = 1142.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 38
text = "You died! All the hostages have died after you"
autowrap_mode = 1

[node name="restart" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 534.0
offset_top = 306.0
offset_right = 599.0
offset_bottom = 337.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnxu8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gnxu8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gnxu8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gnxu8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gnxu8")
text = "Restart"

[node name="exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 527.0
offset_top = 385.0
offset_right = 611.0
offset_bottom = 416.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_pf5tx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pf5tx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pf5tx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pf5tx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pf5tx")
text = "Exit game"

[node name="new_level" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 527.0
offset_top = 342.0
offset_right = 610.0
offset_bottom = 373.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q2gqp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q2gqp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_q2gqp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q2gqp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q2gqp")
text = "New level
"

[connection signal="pressed" from="Panel/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/new_level" to="." method="_on_new_level_pressed"]
